packages/taquito-michel-codec/test/contracts_013/ill_typed/stack_bottom_undigable.tz
parameter unit;
storage unit;
code {
       DROP;
       DIG 0;
     }
